// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/VehicleResults/FiltersControl/FilterMenu/FormControls/SelectWithClearButton Blank smoke-test 1`] = `
<div role="dialog"
     aria-modal="true"
     class="offcanvas offcanvas-start show"
     tabindex="-1"
     style="visibility: visible;"
>
  <div class="offcanvas-body">
    <div class="filter-controls-menu">
      <div class="filter-controls-menu-controls">
        <form>
          <div>
            <div class="input-group mb-2">
              <span class="input-group-text"
                    id="filter-results-field-label"
              >
                Field
              </span>
              <select class="form-control">
                <option value>
                  Choose Door...
                </option>
                <option value="1">
                  1
                </option>
                <option value="2">
                  2
                </option>
                <option value="3">
                  3
                </option>
              </select>
              <button aria-label="clear undefined filter"
                      class="btn btn-secondary"
                      type="button"
              >
                ✕
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/FiltersControl/FilterMenu/FormControls/SelectWithClearButton WithDefaultValue smoke-test 1`] = `
<div role="dialog"
     aria-modal="true"
     class="offcanvas offcanvas-start show"
     tabindex="-1"
     style="visibility: visible;"
>
  <div class="offcanvas-body">
    <div class="filter-controls-menu">
      <div class="filter-controls-menu-controls">
        <form>
          <div>
            <div class="input-group mb-2">
              <span class="input-group-text"
                    id="filter-results-field-label"
              >
                Field
              </span>
              <select class="form-control">
                <option value>
                  Choose Door...
                </option>
                <option value="1">
                  1
                </option>
                <option value="2"
                        selected
                >
                  2
                </option>
                <option value="3">
                  3
                </option>
              </select>
              <button aria-label="clear undefined filter"
                      class="btn btn-secondary"
                      type="button"
              >
                ✕
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
